--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
 <html>
 
   <head>
-    <link rel="stylesheet" href="/css/styles.css"> 
+    <link rel="stylesheet" href="/css/styles.css">
+    <script src="/js/app.js"></script>
   </head>
   <body>
     <h1>From a Static File</h1>
