Add image to webpage

--- a/public/about.html
+++ b/public/about.html
@@ -7,6 +7,8 @@
   </head>
   <body>
     <h1>About</h1>
+    <img src="./img/IMG_1184.jpeg">
+    <p> Hi y'all I'm Dona Ferdinando, a cute Sri Lankan girl. Soon enough though I'll be a kiwi girl ;).</p>
   </body>
 
 </html>
